; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqformat.c_pq_sendcountedtext.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqformat.c_pq_sendcountedtext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pq_sendcountedtext(i32 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 4, i32 0
  store i32 %14, i32* %9, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i8* @pg_server_to_client(i8* %15, i32 %16)
  store i8* %17, i8** %10, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %18, %19
  br i1 %20, label %21, label %35

21:                                               ; preds = %4
  %22 = load i8*, i8** %10, align 8
  %23 = call i32 @strlen(i8* %22)
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %9, align 4
  %27 = add nsw i32 %25, %26
  %28 = call i32 @pq_sendint32(i32 %24, i32 %27)
  %29 = load i32, i32* %5, align 4
  %30 = load i8*, i8** %10, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @appendBinaryStringInfoNT(i32 %29, i8* %30, i32 %31)
  %33 = load i8*, i8** %10, align 8
  %34 = call i32 @pfree(i8* %33)
  br label %45

35:                                               ; preds = %4
  %36 = load i32, i32* %5, align 4
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* %9, align 4
  %39 = add nsw i32 %37, %38
  %40 = call i32 @pq_sendint32(i32 %36, i32 %39)
  %41 = load i32, i32* %5, align 4
  %42 = load i8*, i8** %6, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @appendBinaryStringInfoNT(i32 %41, i8* %42, i32 %43)
  br label %45

45:                                               ; preds = %35, %21
  ret void
}

declare dso_local i8* @pg_server_to_client(i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @pq_sendint32(i32, i32) #1

declare dso_local i32 @appendBinaryStringInfoNT(i32, i8*, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
